--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "stripe": "^12.14.0"
   }
 }
