--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1",
-    "stripe": "^12.14.0"
+    "stripe": "^12.14.0",
+    "uuid": "^9.0.0"
   }
 }
